# fortune-avenue-qt

./: .gitignore  .gitmodules  .travis.yml  AppIcon.icns  CMakeLists.txt  Info.plist  README.md  autoassignshopmodelsdialog.cpp  autoassignshopmodelsdialog.h  autoassignshopmodelsdialog.ui  autopath.cpp  autopath.h  darkdetect.h  directions.h  fortune-avenue-port.pro  fortune-avenue-port.qrc  fortune-avenue.desktop  fortune-avenue.qrc  fortuneavenueapp.cpp  fortuneavenueapp.h  fortuneavenuegraphicsscene.cpp  fortuneavenuegraphicsscene.h  fortunestreetdata.cpp  fortunestreetdata.h  hungarian.cpp  hungarian.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  preferencesdialog.cpp  preferencesdialog.h  preferencesdialog.ui  region.cpp  region.h  screenshotdialog.cpp  screenshotdialog.h  screenshotdialog.ui  squareaddcmd.cpp  squareaddcmd.h  (+16 more)
.github/workflows/: cmake.yml  qmake.yml
languages/: en_US.qm  en_US.ts  it_IT.qm  it_IT.ts  ja_JP.qm  ja_JP.ts
palettes/: blueberry.json  chocolate.json  classic_dark.json  classic_light.json  kiwi.json  lemon.json  plum.json  pumpkin.json  sea_salt.json  spinach.json  strawberry.json  wine.json
